@@ -1,5 +1,9 @@
 2008-03-08  Marcus D. Hanwell  <marcus@cryos.org>
 
+	* libavogadro/src/glwidget.cpp: Added some read and write locks at
+	appropriate looking places in the GLWidget. Should help but it may
+	need to be finer grained in places.
+
 	* avogadro/src/main.cpp: Looks like some drivers have broken
 	XInitThreads() functions. Only enable in threaded GL builds.
 
